Crash when scrubbing in time on a OpenVDB Smoke #47559

Closed
opened 2016-02-25 08:24:19 +01:00 by Antonio Buch · 8 comments

System Information
Windows 10 Pro
Intel i7-6700K
GeForce GTX TITAN Black

Blender Version
2.76.11 da81227

Short description of error
If you have an OpenVDB cached smoke, Blender close when scrubbing fast to the frame 0.

Exact steps for others to reproduce the error

On a new scene, make a Quick Smoke with the default cube

Save the file in order to be able to cache the simulation

Bake the simulation in OpenVDB format

  • Move the time cursor from any point to the frame #0. If you do it slowly it will work, but if you make a fast movement Blender will close automatically.
**System Information** Windows 10 Pro Intel i7-6700K GeForce GTX TITAN Black **Blender Version** 2.76.11 da81227 **Short description of error** If you have an OpenVDB cached smoke, Blender close when scrubbing **fast** to the frame 0. **Exact steps for others to reproduce the error** # On a new scene, make a Quick Smoke with the default cube # Save the file in order to be able to cache the simulation # Bake the simulation in OpenVDB format - Move the time cursor from any point to the frame #0. If you do it slowly it will work, but if you make a fast movement Blender will close automatically.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @antoniobuch1

Added subscriber: @antoniobuch1

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich
Kévin Dietrich self-assigned this 2016-02-25 08:42:15 +01:00

Will check on that a bit later.

Will check on that a bit later.
Author

Another way to get this error is by jumping to the frame #0. Like jumping to start point or jumping to previous keyframe (assuming there's a keyframe on frame #0).

EDIT: Actually it happens with any frame with no baking.

Another way to get this error is by jumping to the frame #0. Like jumping to start point or jumping to previous keyframe (assuming there's a keyframe on frame #0). EDIT: Actually it happens with any frame with no baking.

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by f1b5b97bed

This issue was referenced by f1b5b97bed35bba7b0955d4255792c22f3de9eb3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47559
No description provided.