Fix T47559: Crash when scrubbing in time on a OpenVDB Smoke.

Cache reading was not using the right simulation flags (outdated), which
made it lookup non-existent grids, and crash on de-referencing null
pointers.